[package]
name = "dmg_emu"
version = "0.1.0"
authors = ["Nicholas Hallman <advanderar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
pixels = "0.2.0"
winit = "0.24"
winit_input_helper = "0.9"

[dev-dependencies]
test-case = "1.1.0"
cascade = "1.0.0"