[package]
name = "dmg_emu"
version = "0.1.0"
authors = ["Nicholas Hallman <advanderar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19.0", optional = true }
pixels = { version = "0.2.0", optional = true }
winit = { version = "0.24", optional = true }
winit_input_helper = { version = "0.9", optional = true }

[dev-dependencies]
test-case = "1.1.0"
cascade = "1.0.0"

[features]
fancy-feature = ["crossterm", "pixels", "winit", "winit_input_helper"]